# EchoPrime

./: EchoPrimeDemo.ipynb  main.py  pyproject.toml  requirements.txt
assets/: all_phr_bs.json
echo_prime/: __init__.py  model.py
utils/: utils.py
