[project]
name = "echoprime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets==8.1.2",
    "matplotlib",
    "mysql-connector-python==8.0.31",
    "numpy<2",
    "opencv-python-headless==4.5.5.64",
    "pandas",
    "polars==0.15.14",
    "pydicom==2.3.1",
    "pytorch-lightning==2.2.0.post0",
    "pywavelets>=1.5.0",
    "scikit-learn",
    "torchvision",
    "transformers>=4.57.1",
    "wandb==0.16.3",
]
